--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,15 @@
 image:
   file: .gitpod.Dockerfile
+
+tasks:    
+  - name: 🛠️ Init workspace
+    command: |
+      echo hello
+      echo $GCP_SERVICE_KEY > .gcloud-conf.json
+      gcloud auth activate-service-account --key-file .gcloud-conf.json
+      rm -f .gcloud-conf.json
+      gcloud config set project $GCP_PROJECT
+
+vscode:
+  extensions:
+    - googlecloudtools.cloudcode
